# popper_explainer

./: .env.example  .gitignore  API_CONTRACT.md  CLAIMS.md  CLAUDE.md  Dockerfile  FIXTURES.md  HC_CONTEXT_MGR.md  HIGH_CONTEXT_AGENT.md  KG_UNIVERSE.md  LAW_PROPOSER.md  PHASE-B.md  PHASE-C.md  PHASE-D.md  PHASE-E.md  PHASE-F.md  PROPOSER.md  TEST_API.md  TEST_HARNESS.md  UNIVERSE.md  VERIFIER.md  knowledge_graph.md  pyproject.toml  theorems.json  theorems.md
.claude/agents/: claims-subsystem-maintainer.md  kinetic-grid-enforcer.md  knowledge-graph-engineer.md  law-proposer-subsystem.md  llm-prompt-engineer.md  tester-harness-engineer.md
scripts/: analyze_untestable.py  deduplicate_laws.py  dump_run_state.py  dump_theorems.py  export_discoveries.py  export_research_log.py  export_research_logs.py  lint_laws.py  revoke_false_positives.py  run_ahc_agent.py  run_discovery.py  run_escalation.py  run_orchestrated.py  run_theorem_generation.py  run_webviewer.py
src/: __init__.py  verbose.py
src/ahc/: __init__.py
src/claims/: __init__.py  ast_evaluator.py  ast_schema.py  compiler.py  expr_ast.py  expr_evaluator.py  expr_parser.py  (+6 more)
tests/: __init__.py  test_ast_claims.py  test_claim_compiler.py  test_cluster_artifacts.py  test_counterexample_key.py  test_db.py  test_expr_compiler.py  test_failure_classification.py  test_harness.py  test_integrity.py  test_novelty.py  test_regression.py  test_simulator.py  test_theorem_clustering.py  test_theorem_models.py  test_theorem_parser.py  test_theorem_proposer.py  test_theorem_signature.py  test_verbose.py  test_witness_capture.py
(+163 files in other folders)
